--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,21 +1,36 @@
-<h1>Cats!</h1>
+<h1>burgers!</h1>
 
-<h2>Cats that are not sleepy!</h2>
+<h2>burgers that are not devoured!</h2>
 
 <ul>
-  {{#each cats}}
-  {{#unless sleepy}}
-  {{> cats/cat-block sleep=true}}
+  {{#each burgers}}
+  {{#unless devoured}}
+  {{!-- {{> cat-block}} --}}
+  <li>
+	{{name}}
+
+	<button class="change-sleep" data-id="{{id}}" data-newsleep="{{sleep}}">
+		    Devoured
+	</button>
+
+	<button class="delete-cat" data-id="{{this.id}}">DELETE!</button>
+</li>
   {{/unless}}
   {{/each}}
 </ul>
 
-<h2>Cats that are sleepy!</h2>
+<h2>burgers that are devoured!</h2>
 
 <ul>
-  {{#each cats}}
-  {{#if sleepy}}
-  {{> cats/cat-block sleep=false}}
+  {{#each burgers}}
+  {{#if devoured}}
+  {{!-- {{> burgers/cat-block sleep=false}} --}}
+  <li>
+	{{name}}
+
+
+	<button class="delete-cat" data-id="{{this.id}}">DELETE!</button>
+</li>
   {{/if}}
   {{/each}}
 </ul>
@@ -29,9 +44,9 @@
   </div>
 
   <div class="form-group">
-    <label for="sleepy">Sleepy?</label><br>
-    <input type="radio" name="sleepy" value="1" id="sleepy" checked> Sleepy!<br>
-    <input type="radio" name="sleepy" value="0" id="awake"> Awake
+    <label for="devoured">devoured?</label><br>
+    <input type="radio" name="devoured" value="1" id="devoured" checked> devoured!<br>
+    <input type="radio" name="devoured" value="0" id="awake"> Awake
   </div>
 
   <button type="submit">Add Cat</button>
