--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,7 +13,7 @@
 		    Devoured
 	</button>
 
-	<button class="delete-cat" data-id="{{this.id}}">DELETE!</button>
+	<button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
 </li>
   {{/unless}}
   {{/each}}
@@ -35,19 +35,14 @@
   {{/each}}
 </ul>
 
-<h2>Add a Cat</h2>
+<h2>Add a burger</h2>
 <form id="create-form">
 
   <div class="form-group">
-    <label for="ca">Cat Name:</label>
+    <label for="ca">burger:</label>
     <input type="text" id="ca" name="name">
   </div>
 
-  <div class="form-group">
-    <label for="devoured">devoured?</label><br>
-    <input type="radio" name="devoured" value="1" id="devoured" checked> devoured!<br>
-    <input type="radio" name="devoured" value="0" id="awake"> Awake
-  </div>
 
-  <button type="submit">Add Cat</button>
+  <button type="submit">Add burger</button>
 </form>
